--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[target.'cfg(loom)'.dependencies]
+loom = "0.6"
+
 [dependencies]
 atomic-wait = "1.1.0"
+loom = "0.6"
